# cloud-engineer-automation-assessment

./: README.md  pyproject.toml
object_scanner/: __init__.py  object_scanner.py  scan.py
tests/: conftest.py  test_object_scanner.py
tests/doubles/: aws_context.py  aws_events.py
tests/fixtures/: flame.png.license  liberty.jpeg.license  poem.txt  poem.txt.license
