[tool.poetry]
name = "pairing-interview-tagging-function"
version = "0.1.0"
description = "A pairing interview example repository"
authors = ["Lawrence <acodeninja@users.noreply.github.com>"]
license = "MPL-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
moto = {extras = ["all"], version = "^4.2.10"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
